# catgenie-api

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/catgenie/: __init__.py  auth.py  client.py  const.py  exceptions.py  models.py  signing.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_signing.py
