[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "catgenie"
dynamic = ["version"]
description = "Async Python client for the CatGenie AI smart litter box API by PetNovations"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Kurt Chrisford", email = "kurt@chrisford.com.au" },
]
keywords = ["catgenie", "petnovations", "home-assistant", "iot", "smart-litter-box"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "curl-cffi>=0.7",
    "pydantic>=2.0",
    "pycryptodome>=3.20",
]

[project.urls]
Homepage = "https://github.com/kclif9/catgenieapi"
Repository = "https://github.com/kclif9/catgenieapi"
"Bug Tracker" = "https://github.com/kclif9/catgenieapi/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/catgenie"]
omit = ["*/scripts/*"]

[tool.coverage.report]
show_missing = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/catgenie/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/catgenie"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_reexport = true
strict_equality = true
ignore_missing_imports = true
# curl_cffi and pycryptodome have incomplete stubs; don't penalise callers
disallow_untyped_calls = false
warn_return_any = false

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = true
